Moving of files in Repo
Moving files to attempt to meet Arduino Library standards

--- a/library.properties
+++ b/library.properties
@@ -1,4 +1,4 @@
-name=genieArduino
+name=genieArduino-BETA
 version=20170804
 author=4D Systems Pty Ltd
 maintainer=4D Systems Pty Ltd <engineering@4dsystems.com.au>
