--- a/library.properties
+++ b/library.properties
@@ -1,5 +1,5 @@
 name=genieArduino-BETA
-version=v1.1.0
+version=1.5.1-beta
 author=4D Systems Pty Ltd
 maintainer=4D Systems Pty Ltd <engineering@4dsystems.com.au>
 sentence=4D Systems ViSi-Genie library for Arduino
